# usaint-agent-backend

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
apps/agent/: agent_service.py  browser.py  cafeteria.py  grade_fetcher.py  main.py  menu.json  notice_fetcher.py  prac17_4.ipynb  prompt.py  rag.py  session.py  session_manager.py  type.py  usaint.py
apps/user_api/domain/auth/: controller.py  exception.py  service.py
apps/user_api/domain/auth/dto/: request.py  response.py  token.py
apps/user_api/domain/chat/: controller.py  entity.py  exception.py  service.py  socket_handler.py
apps/user_api/domain/chat/dto/: request.py  response.py
apps/user_api/domain/chat_room/: controller.py  entity.py  exception.py  service.py
apps/user_api/domain/chat_room/dto/: request.py  response.py
apps/user_api/domain/notification/: controller.py  entity.py  exception.py  service.py
apps/user_api/domain/notification/dto/: request.py  response.py
apps/user_api/domain/schedule/: controller.py  entity.py  exception.py  service.py
apps/user_api/domain/schedule/dto/: request.py  response.py
apps/user_api/domain/usaint_account/: controller.py  entity.py  exception.py  service.py
apps/user_api/domain/usaint_account/dto/: request.py  response.py
apps/user_api/domain/user/: controller.py  entity.py  exception.py
apps/user_api/domain/user/dto/: request.py  (+1 more)
lib/: browser.py  database.py  env.py  security.py  session.py  type.py
scripts/: generate_public_key_from_private.py  generate_vapid_keys.py  init_db.py
study/: ch01.py
